@@ -19,7 +19,7 @@ our %S = (%S,
   url_static      => 'http://s.vndb.org',
   skin_default    => 'angel',
   cookie_domain   => '.vndb.org',
-  cookie_auth     => 'vndb_auth',
+  cookie_prefix   => 'vndb_',
   global_salt     => 'any-private-string-here',
   source_url      => 'http://git.blicky.net/vndb.git/?h=master',
   admin_email     => 'contact@vndb.org',
