@@ -11,6 +11,7 @@
 	- Added Apple iProduct platform
 	- Removed XML sitemap
 	- Added image dimensions to screenshot thumbail <img> tags
+	- Prefix all cookies with a configurable cookie_prefix
 	- Bugfix: only redirect VN search to VN page if page=1
 	- Bugfix: remove duplicate votes when merging tags (fixes a 500)
 	- Bugfix: Multi::Anime: don't crash when anidb returns an invalid or empty year
